# ngeras

./: README.md  package.json
api/: .env.example  .gitignore  Cargo.toml
api/app/: Cargo.toml
api/app/src/: lib.rs  main.rs
api/app/src/v1/: mod.rs
api/app/src/v1/docs/: controller.rs  mod.rs
api/app/src/v1/permissions/: controller.rs  dto.rs  mod.rs  repository.rs  service.rs
api/app/src/v1/roles/: controller.rs  dto.rs  mod.rs  (+7 more)
api/common/: Cargo.toml
api/common/src/: lib.rs
api/common/src/errors/: mod.rs
api/common/src/response/: mod.rs  success.rs
api/common/src/types/: mod.rs
api/config/: Cargo.toml
api/config/src/: lib.rs
api/config/src/app/: mod.rs
api/config/src/database/: mod.rs
api/config/src/jwt/: mod.rs
api/domain/: Cargo.toml
api/domain/src/models/: mod.rs  permission.rs  role.rs  user.rs
api/lib/: Cargo.toml
api/lib/src/: lib.rs
api/lib/src/axum/: mod.rs
api/lib/src/jsonwebtoken/: mod.rs
api/libs/: Cargo.toml
api/libs/src/axum/: mod.rs
api/libs/src/postgres/: mod.rs
api/migrations/: 20250903103620_roles.sql  20250908013833_permissions.sql  20250908013922_role_has_permissions.sql  20250909073307_users.sql  20250910033109_adjust_users_columns_name.sql  20250910033554_adjust_roles_columns_name.sql  20250910033622_adjust_permissions_columns_name.sql  20250910033808_adjust_role_has_permissions_columns_name.sql  20250910043020_adjust_role_updated_at_trigger.sql  20250910062207_drop_constraint_and_adjust_trigger.sql
api/utils/: Cargo.toml
api/utils/src/response/: create_pagination.rs  formatter.rs  mod.rs
(+185 files in other folders)
