[workspace]
members = [
    "app",
    "lib",
    "config",
    "utils",
    "common"
]
resolver = "3"

[workspace.dependencies]
anyhow = "1.0.99"
axum = "0.8.4"
axum-extra = "0.10.1"
axum-test = "18.0.2"
http = "1.3.1"
serde = { version = "1.0.219", features = ["derive"] }
sqlx = { version = "0.8.6", features = ["runtime-tokio", "postgres", "macros"] }
tokio = { version = "1.47.1", features = ["full"] }
tower = "0.5.2"
serde_json = "1.0.138"
jsonwebtoken = "9.3.1"
utoipa-swagger-ui = { version = "9.0.0", features = ["axum"] }
chrono = "0.4.39"
dotenvy = "0.15.7"
sqlx-paginated = { version = "0.2.32", features = ["postgres"] }
