[package]
name = "app"
version = "0.1.0"
edition = "2024"

[dependencies]
libs = { path = "../libs" }
config = { path = "../config" }
utils = { path = "../utils" }
common = { path = "../common" }
domain = { path = "../domain" }
axum.workspace = true
tokio.workspace = true
serde.workspace = true
anyhow.workspace = true
serde_json.workspace = true
sqlx.workspace = true
sqlx-paginated.workspace = true
validator = { version = "0.20.0", features = ["derive"] }
tower-http = { version = "0.6.6", features = ["cors"] }
